--- a/plugin.xml
+++ b/plugin.xml
@@ -6,8 +6,7 @@
     </js-module>
 
     <dependency id="cordova-plugin-cocoapod-support" version="1.6.2"/>
-    <dependency id="cordova-plugin-add-swift-support" version="2.0.2"/>
-    
+
     <platform name="ios">
         <config-file parent="/*" target="config.xml">
             <feature name="CordovaElectronicId">
@@ -160,6 +159,7 @@
                 </dict>
             </dict>
         </config-file>
+        <dependency id="cordova-plugin-add-swift-support@1.7.2"/>
         <!--<framework src="VideoID" type="podspec" spec="7.0.11" embed="true" />
         <framework src="Alamofire" type="podspec" spec="5.1.0" embed="true" />-->
 
