--- a/plugin.xml
+++ b/plugin.xml
@@ -5,7 +5,7 @@
         <clobbers target="CordovaElectronicId" />
     </js-module>
 
-    <!--<dependency id="cordova-plugin-cocoapod-support" version="1.6.2"/>-->
+    <dependency id="cordova-plugin-cocoapod-support" url="https://github.com/agoncalvesos/cordova-plugin-cocoapods-support.git"/>
 
     <platform name="ios">
         <hook type="before_plugin_install" src="hooks/pods_fix.js" />
@@ -164,7 +164,7 @@
             </dict>
         </config-file>
         <dependency id="cordova-plugin-add-swift-support@1.7.2"/>
-        <framework src="VideoID" type="podspec" spec="7.1.0" embed="true" />
+        <!--<framework src="VideoID" type="podspec" spec="7.1.0" embed="true" />-->
         <!--<framework src="Alamofire" type="podspec" spec="5.1.0" embed="true" />-->
 
         <!--<podspec>
@@ -177,6 +177,13 @@
         </podspec>-->
         <!--<pods-config ios-min-version="10.0" use-frameworks="true"/>
         <pod id="VideoID" version="7.0.11"/>-->
+
+         <pods-config ios-min-version="11.0">
+            <!-- optionally add private spec sources -->
+            <!--<source url="https://github.com/CocoaPods/Specs.git"/>-->
+        </pods-config>
+
+        <pod name="VideoID" />
 
     </platform>
 
