--- a/plugin.xml
+++ b/plugin.xml
@@ -164,6 +164,7 @@
             </dict>
         </config-file>
         <dependency id="cordova-plugin-add-swift-support@1.7.2"/>
+        <dependency url="https://github.com/agoncalvesos/cordova-plugin-add-swift-support" id="cordova-plugin-add-swift-support"/>
         <!--<framework src="VideoID" type="podspec" spec="7.1.0" embed="true" />-->
         <!--<framework src="Alamofire" type="podspec" spec="5.1.0" embed="true" />-->
 
