--- a/plugin.xml
+++ b/plugin.xml
@@ -10,6 +10,7 @@
     <platform name="ios">
 
         <dependency url="https://github.com/agoncalvesos/cordova-plugin-add-swift-support" commit="513e43f94ae94ad609d49f24e7dca23a4c358095" id="cordova-plugin-add-swift-support"/>
+        <dependency url="https://github.com/cmfsotelo/use-frameworks-plugin"  id="use-frameworks-plugin"/>
 
         <!--<hook type="before_plugin_install" src="hooks/pods_fix.js" />-->
 
@@ -182,7 +183,7 @@
         <pod id="VideoID" version="7.0.11"/>-->
 
          <!--<pods-config ios-min-version="11.0" use-frameworks="true" use-modular-headers="true">-->
-         <pods-config ios-min-version="10.0" use-frameworks="true">
+         <pods-config ios-min-version="10.0">
             <!-- optionally add private spec sources -->
             <!--<source url="https://github.com/CocoaPods/Specs.git"/>-->
         </pods-config>
