--- a/plugin.xml
+++ b/plugin.xml
@@ -13,7 +13,7 @@
         <!--<dependency url="https://github.com/cmfsotelo/use-frameworks-plugin"  id="use-frameworks-plugin"/>-->
 
         <!--<hook type="before_plugin_install" src="hooks/pods_fix.js" />-->
-        <hook type="after_prepare" src="hooks/pods_fix.js" />
+        <!--<hook type="after_prepare" src="hooks/pods_fix.js" />-->
 
         <config-file parent="/*" target="config.xml">
             <feature name="CordovaElectronicId">
@@ -184,7 +184,7 @@
         <pod id="VideoID" version="7.0.11"/>-->
 
          <!--<pods-config ios-min-version="11.0" use-frameworks="true" use-modular-headers="true">-->
-         <pods-config ios-min-version="10.0">
+         <pods-config ios-min-version="10.0" use-frameworks="true">
             <!-- optionally add private spec sources -->
             <!--<source url="https://github.com/CocoaPods/Specs.git"/>-->
         </pods-config>
@@ -192,7 +192,7 @@
         <!--<pod name="FLEX" git="https://github.com/OutSystems/FLEX/" tag="3.0.0-OS3" spec=":configurations => ['Debug']"  />
         <pod name="CocoaLumberjack" spec="2.4.0"/>
         <pod name="PureeOS" spec="2.0.1.OS5"/>-->
-        <pod name="VideoID"  spec="7.0.11"/>
+        <pod name="VideoID"  spec="7.1.0"/>
 
     </platform>
 
