--- a/plugin.xml
+++ b/plugin.xml
@@ -5,7 +5,7 @@
         <clobbers target="CordovaElectronicId" />
     </js-module>
 
-    <dependency id="cordova-plugin-cocoapod-support" url="https://github.com/agoncalvesos/cordova-plugin-cocoapods-support.git"/>
+    <!--<dependency id="cordova-plugin-cocoapod-support" url="https://github.com/agoncalvesos/cordova-plugin-cocoapods-support.git"/>-->
 
     <platform name="ios">
 
@@ -169,7 +169,7 @@
             </dict>
         </config-file>
         <!--<dependency id="cordova-plugin-add-swift-support@1.7.2"/>-->
-        <!--<framework src="VideoID" type="podspec" spec="7.1.0" embed="true" />-->
+        <framework src="VideoID" type="podspec" spec="7.0.11" embed="true" />
         <!--<framework src="Alamofire" type="podspec" spec="5.1.0" embed="true" />-->
 
         <!--<podspec>
@@ -184,16 +184,16 @@
         <pod id="VideoID" version="7.0.11"/>-->
 
          <!--<pods-config ios-min-version="11.0" use-frameworks="true" use-modular-headers="true">-->
-         <pods-config ios-min-version="10.0" use-frameworks="true">
+         <!--<pods-config ios-min-version="1.0" use-frameworks="true">-->
             <!-- optionally add private spec sources -->
             <!--<source url="https://github.com/CocoaPods/Specs.git"/>-->
-        </pods-config>
+        <!--</pods-config>-->
 
         <!--<pod name="FLEX" git="https://github.com/OutSystems/FLEX/" tag="3.0.0-OS3" spec=":configurations => ['Debug']"  />
         <pod name="CocoaLumberjack" spec="2.4.0"/>
         <pod name="PureeOS" spec="2.0.1.OS5"/>-->
         <!--<pod name="VideoID" spec="7.0.11" modular_headers="true"/>-->
-        <pod name="VideoID" spec="7.0.11" />
+        <!--<pod name="VideoID" spec="7.0.11" />-->
 
     </platform>
 
