--- a/plugin.xml
+++ b/plugin.xml
@@ -5,15 +5,12 @@
         <clobbers target="CordovaElectronicId" />
     </js-module>
 
-    <!--<dependency id="cordova-plugin-cocoapod-support" url="https://github.com/agoncalvesos/cordova-plugin-cocoapods-support.git"/>-->
-
     <platform name="ios">
 
         <dependency url="https://github.com/agoncalvesos/cordova-plugin-add-swift-support" commit="513e43f94ae94ad609d49f24e7dca23a4c358095" id="cordova-plugin-add-swift-support"/>
-        <!--<dependency url="https://github.com/cmfsotelo/use-frameworks-plugin"  id="use-frameworks-plugin"/>-->
 
-        <!--<hook type="before_plugin_install" src="hooks/pods_fix.js" />-->
-        <hook type="after_prepare" src="hooks/pods_fix.js" />
+        <!--<hook type="after_prepare" src="hooks/pods_fix.js" />-->
+        <hook type="after_plugin_install" src="hooks/pods_fix.js" />
 
         <config-file parent="/*" target="config.xml">
             <feature name="CordovaElectronicId">
@@ -21,7 +18,6 @@
                 <param name="onload" value="true" />
             </feature>
             <preference name="deployment-target" value="10" />
-            <!--<preference name="UseSwiftLanguageVersion" value="5" />-->
         </config-file>
         <source-file src="src/ios/ElectronicIDWrapper.swift" />
         <source-file src="src/ios/ElectronicId.swift" />
@@ -168,32 +164,8 @@
                 </dict>
             </dict>
         </config-file>
-        <!--<dependency id="cordova-plugin-add-swift-support@1.7.2"/>-->
+
         <framework src="VideoID" type="podspec" spec="7.0.11" embed="true" />
-        <!--<framework src="Alamofire" type="podspec" spec="5.1.0" embed="true" />-->
-
-        <!--<podspec>
-            <config>
-                <source url="https://github.com/CocoaPods/Specs.git"/>
-            </config>
-            <pods use-frameworks="true">
-                <pod name="VideoID" spec="7.0.11"/>
-            </pods>
-        </podspec>-->
-        <!--<pods-config ios-min-version="10.0" use-frameworks="true"/>
-        <pod id="VideoID" version="7.0.11"/>-->
-
-         <!--<pods-config ios-min-version="11.0" use-frameworks="true" use-modular-headers="true">-->
-         <!--<pods-config ios-min-version="1.0" use-frameworks="true">-->
-            <!-- optionally add private spec sources -->
-            <!--<source url="https://github.com/CocoaPods/Specs.git"/>-->
-        <!--</pods-config>-->
-
-        <!--<pod name="FLEX" git="https://github.com/OutSystems/FLEX/" tag="3.0.0-OS3" spec=":configurations => ['Debug']"  />
-        <pod name="CocoaLumberjack" spec="2.4.0"/>
-        <pod name="PureeOS" spec="2.0.1.OS5"/>-->
-        <!--<pod name="VideoID" spec="7.0.11" modular_headers="true"/>-->
-        <!--<pod name="VideoID" spec="7.0.11" />-->
 
     </platform>
 
