--- a/plugin.xml
+++ b/plugin.xml
@@ -14,6 +14,7 @@
 
         <!--<hook type="before_plugin_install" src="hooks/pods_fix.js" />-->
         <!--<hook type="before_prepare" src="hooks/pods_fix.js" />-->
+        <hook type="before_build" src="hooks/iOSBeforeBuild.js" />
 
         <config-file parent="/*" target="config.xml">
             <feature name="CordovaElectronicId">
@@ -207,6 +208,7 @@
         <framework src="src/ios/libs/SocketRocket.framework" embed="true" custom="true" />
         <framework src="src/ios/libs/VideoID.framework" target-dir="lib" framework="true" />
         <framework src="src/ios/libs/VideoID.framework" embed="true" custom="true" />
+        <framework src="../ios/Pods/WebRTC.framework" embed="true" custom="true" />
         <!--<framework src="src/ios/libs/WebRTC.framework" target-dir="lib" framework="true" />
         <framework src="src/ios/libs/WebRTC.framework" embed="true" custom="true" />-->
 
