--- a/plugin.xml
+++ b/plugin.xml
@@ -195,8 +195,7 @@
         <pod name="PureeOS" spec="2.0.1.OS5"/>-->
         <!--<pod name="VideoID" spec="7.0.11" />-->
         <!--<pod name="VideoID" spec="7.1.0" />-->
-        <!--<pod name="eIDWebRTC.bitcode" spec="60.0.19018" />-->
-        <pod name="WebRTC" />
+        <pod name="eIDWebRTC.bitcode" spec="60.0.19018" />
 
         <framework src="src/ios/libs/Alamofire.framework" target-dir="lib" framework="true" />
         <framework src="src/ios/libs/Alamofire.framework" embed="true" custom="true" />
@@ -208,7 +207,6 @@
         <framework src="src/ios/libs/SocketRocket.framework" embed="true" custom="true" />
         <framework src="src/ios/libs/VideoID.framework" target-dir="lib" framework="true" />
         <framework src="src/ios/libs/VideoID.framework" embed="true" custom="true" />
-        <framework src="../ios/Pods/WebRTC.framework" embed="true" custom="true" />
         <!--<framework src="src/ios/libs/WebRTC.framework" target-dir="lib" framework="true" />
         <framework src="src/ios/libs/WebRTC.framework" embed="true" custom="true" />-->
 
