--- a/plugin.xml
+++ b/plugin.xml
@@ -195,7 +195,8 @@
         <pod name="PureeOS" spec="2.0.1.OS5"/>-->
         <!--<pod name="VideoID" spec="7.0.11" />-->
         <!--<pod name="VideoID" spec="7.1.0" />-->
-        <pod name="eIDWebRTC.bitcode" spec="60.0.19018" />
+        <!--<pod name="eIDWebRTC.bitcode" spec="60.0.19018" />-->
+        <pod name="GoogleWebRTC" />
 
         <framework src="src/ios/libs/Alamofire.framework" target-dir="lib" framework="true" />
         <framework src="src/ios/libs/Alamofire.framework" embed="true" custom="true" />
