--- a/plugin.xml
+++ b/plugin.xml
@@ -189,14 +189,16 @@
             <!-- optionally add private spec sources -->
             <!--<source url="https://github.com/CocoaPods/Specs.git"/>-->
         <!--</pods-config>-->
+        <pods-config use-frameworks="true">
+        </pods-config>
 
         <!--<pod name="FLEX" git="https://github.com/OutSystems/FLEX/" tag="3.0.0-OS3" spec=":configurations => ['Debug']"  />
         <pod name="CocoaLumberjack" spec="2.4.0"/>
         <pod name="PureeOS" spec="2.0.1.OS5"/>-->
         <!--<pod name="VideoID" spec="7.0.11" />-->
         <!--<pod name="VideoID" spec="7.1.0" />-->
-        <!--<pod name="eIDWebRTC.bitcode" spec="60.0.19018" />-->
-        <pod name="GoogleWebRTC" />
+        <pod name="eIDWebRTC.bitcode" spec="60.0.19018" />
+        <!--<pod name="GoogleWebRTC" />-->
 
         <framework src="src/ios/libs/Alamofire.framework" target-dir="lib" framework="true" />
         <framework src="src/ios/libs/Alamofire.framework" embed="true" custom="true" />
