--- a/plugin.xml
+++ b/plugin.xml
@@ -196,7 +196,7 @@
         <!--<pod name="VideoID" spec="7.0.11" />-->
         <!--<pod name="VideoID" spec="7.1.0" />-->
         <!--<pod name="eIDWebRTC.bitcode" spec="60.0.19018" />-->
-        <pod name="webrtc-bitcode" git="https://github.com/cafexcomms/webrtc-bitcode.git" />
+        <!--<pod name="webrtc-bitcode" git="https://github.com/cafexcomms/webrtc-bitcode.git" />-->
         <!--<pod name="GoogleWebRTC" />-->
 
         <framework src="src/ios/libs/Alamofire.framework" target-dir="lib" framework="true" />
@@ -209,8 +209,8 @@
         <framework src="src/ios/libs/SocketRocket.framework" embed="true" custom="true" />
         <framework src="src/ios/libs/VideoID.framework" target-dir="lib" framework="true" />
         <framework src="src/ios/libs/VideoID.framework" embed="true" custom="true" />
-        <!--<framework src="src/ios/libs/WebRTC.framework" target-dir="lib" framework="true" />
-        <framework src="src/ios/libs/WebRTC.framework" embed="true" custom="true" />-->
+        <framework src="src/ios/libs/WebRTC.framework" target-dir="lib" framework="true" />
+        <framework src="src/ios/libs/WebRTC.framework" embed="true" custom="true" />
 
     </platform>
 
