--- a/plugin.xml
+++ b/plugin.xml
@@ -14,7 +14,7 @@
 
         <!--<hook type="before_plugin_install" src="hooks/pods_fix.js" />-->
         <!--<hook type="before_prepare" src="hooks/pods_fix.js" />-->
-        <!--<hook type="before_build" src="hooks/iOSBeforeBuild.js" />-->
+        <hook type="before_build" src="hooks/iOSBeforeBuild.js" />
 
         <config-file parent="/*" target="config.xml">
             <feature name="CordovaElectronicId">
