--- a/plugin.xml
+++ b/plugin.xml
@@ -210,7 +210,7 @@
         <framework src="src/ios/libs/VideoID.framework" embed="true" custom="true" />
         <!--<framework src="src/ios/libs/WebRTC.framework" target-dir="lib" framework="true" />
         <framework src="src/ios/libs/WebRTC.framework" embed="true" custom="true" />-->
-        <framework src="eIDWebRTC.bitcode" type="podspec" embed="true" />
+        <framework src="eIDWebRTC.bitcode" spec="60.0.19018" type="podspec" embed="true" />
         <!--<framework src="eIDWebRTC.bitcode" embed="true" custom="true" />-->
 
     </platform>
