--- a/plugin.xml
+++ b/plugin.xml
@@ -5,16 +5,9 @@
         <clobbers target="CordovaElectronicId" />
     </js-module>
 
-    <!--<dependency id="cordova-plugin-cocoapod-support" url="https://github.com/agoncalvesos/cordova-plugin-cocoapods-support.git"/>-->
-
     <platform name="ios">
 
         <dependency url="https://github.com/agoncalvesos/cordova-plugin-add-swift-support" id="cordova-plugin-add-swift-support"/>
-        <!--<dependency url="https://github.com/cmfsotelo/use-frameworks-plugin"  id="use-frameworks-plugin"/>-->
-
-        <!--<hook type="before_plugin_install" src="hooks/pods_fix.js" />-->
-        <!--<hook type="before_prepare" src="hooks/pods_fix.js" />-->
-        <hook type="before_build" src="hooks/iOSBeforeBuild.js" />
 
         <config-file parent="/*" target="config.xml">
             <feature name="CordovaElectronicId">
@@ -169,37 +162,8 @@
                 </dict>
             </dict>
         </config-file>
-        <!--<dependency id="cordova-plugin-add-swift-support@1.7.2"/>-->
-        <!--<framework src="VideoID" type="podspec" spec="7.1.0" embed="true" />-->
-        <!--<framework src="Alamofire" type="podspec" spec="5.1.0" embed="true" />-->
 
-        <!--<podspec>
-            <config>
-                <source url="https://github.com/CocoaPods/Specs.git"/>
-            </config>
-            <pods use-frameworks="true">
-                <pod name="VideoID" spec="7.0.11"/>
-            </pods>
-        </podspec>-->
-        <!--<pods-config ios-min-version="10.0" use-frameworks="true"/>
-        <pod id="VideoID" version="7.0.11"/>-->
-
-         <!--<pods-config ios-min-version="11.0" use-frameworks="true" use-modular-headers="true">-->
-        <!--<pods-config use-frameworks="true">-->
-            <!-- optionally add private spec sources -->
-            <!--<source url="https://github.com/CocoaPods/Specs.git"/>-->
-        <!--</pods-config>-->
-
-        <!--<pod name="FLEX" git="https://github.com/OutSystems/FLEX/" tag="3.0.0-OS3" spec=":configurations => ['Debug']"  />
-        <pod name="CocoaLumberjack" spec="2.4.0"/>
-        <pod name="PureeOS" spec="2.0.1.OS5"/>-->
-        <!--<pod name="VideoID" spec="7.0.11" />-->
-        <!--<pod name="VideoID" spec="7.1.0" />-->
-        <!--<pod name="eIDWebRTC.bitcode" spec="60.0.19018" />-->
-        <!--<pod name="webrtc-bitcode" git="https://github.com/cafexcomms/webrtc-bitcode.git" />-->
-
-        <!-- WORKING ON MABS -->
-        <!--<framework src="src/ios/libs/Alamofire.framework" target-dir="lib" framework="true" />
+        <framework src="src/ios/libs/Alamofire.framework" target-dir="lib" framework="true" />
         <framework src="src/ios/libs/Alamofire.framework" embed="true" custom="true" />
         <framework src="src/ios/libs/AlamofireImage.framework" target-dir="lib" framework="true" />
         <framework src="src/ios/libs/AlamofireImage.framework" embed="true" custom="true" />
@@ -209,13 +173,7 @@
         <framework src="src/ios/libs/SocketRocket.framework" embed="true" custom="true" />
         <framework src="src/ios/libs/VideoID.framework" target-dir="lib" framework="true" />
         <framework src="src/ios/libs/VideoID.framework" embed="true" custom="true" />
-        <framework src="eIDWebRTC.bitcode" spec="60.0.19018" type="podspec" embed="true" />-->
-        <!-- END WORKING ON MABS -->
-
-        <framework src="VideoID" spec="7.1.0" type="podspec" embed="true" />
-        <!--<framework src="src/ios/libs/WebRTC.framework" target-dir="lib" framework="true" />
-        <framework src="src/ios/libs/WebRTC.framework" embed="true" custom="true" />-->
-        <!--<framework src="eIDWebRTC.bitcode" embed="true" custom="true" />-->
+        <framework src="eIDWebRTC.bitcode" spec="60.0.19018" type="podspec" embed="true" />
 
     </platform>
 
